@@ -114,8 +114,8 @@ public class ReadableCustomerPopulator extends
                     option.setCode(attribute.getCustomerOption().getCode());
 
                     CustomerOptionDescription d = new CustomerOptionDescription();
-                    d.setDescription(attribute.getCustomerOption().getDescriptionsSettoList().get(0).getDescription());
-                    d.setName(attribute.getCustomerOption().getDescriptionsSettoList().get(0).getName());
+                    d.setDescription(attribute.getCustomerOption().getDescriptionsSettoList().getFirst().getDescription());
+                    d.setName(attribute.getCustomerOption().getDescriptionsSettoList().getFirst().getName());
                     option.setDescription(d);
 
                     readableAttribute.setCustomerOption(option);
@@ -123,8 +123,8 @@ public class ReadableCustomerPopulator extends
                     ReadableCustomerOptionValue optionValue = new ReadableCustomerOptionValue();
                     optionValue.setId(attribute.getCustomerOptionValue().getId());
                     CustomerOptionValueDescription vd = new CustomerOptionValueDescription();
-                    vd.setDescription(attribute.getCustomerOptionValue().getDescriptionsSettoList().get(0).getDescription());
-                    vd.setName(attribute.getCustomerOptionValue().getDescriptionsSettoList().get(0).getName());
+                    vd.setDescription(attribute.getCustomerOptionValue().getDescriptionsSettoList().getFirst().getDescription());
+                    vd.setName(attribute.getCustomerOptionValue().getDescriptionsSettoList().getFirst().getName());
                     optionValue.setCode(attribute.getCustomerOptionValue().getCode());
                     optionValue.setDescription(vd);
 
